# 2023-cpl-coding-2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello.c
0-intro/: CMakeLists.txt  guess.c  hello.c
1-types-io/: CMakeLists.txt  admin  admin-scanf.c  admin.c  circle.c  mol.c  sphere.c
10-double-pointers/: CMakeLists.txt  README.md  echo.c  scores.c  selection-sort-strings.c
11-function-pointers/: CMakeLists.txt  README.md  atexit.c  bsearch-gnuc.c  decl.c  double-pointers.c  integrate.c  signal.c  sort.c
12-struct/: CMakeLists.txt  README.md  musician.c  padding.c  sds.c
13-linked-list/: README.md  josephus.c
2-if-for-array/: CMakeLists.txt  README.md  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: CMakeLists.txt  README.md  binary-search.c  birth  birth-sorted  digits-do-while.c  digits-while.c  palindrome.c  primes.c  selection-sort  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  README.md  game-of-life  game-of-life-chatgpt  game-of-life-chatgpt.c  game-of-life.c  merge.c
5-function/: CMakeLists.txt  binary-search.c  game-of-life-transformed.c  game-of-life.c  guess.c  leap.c  merge.c  palindrome.c  primes.c  selection-sort  selection-sort.c  stars.c
6-recursion/: CMakeLists.txt  README.md  bsearch-iter.c  bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-iter.c  gcd-re.c  main-re.c  merge.c  mergesort.c  min-re.c  min.c  sum-re.c
7-data-types/: CMakeLists.txt  README.md  char.c  compare.c  explict-conversion.c  float-limits.c  implicit-conversion.c  (+4 more)
(+12 files in other folders)
