# for
add_executable(stars stars.c)
add_executable(primes primes.c)

# while (do-while)
add_executable(binary-search binary-search.c)
add_executable(digits-while digits-while.c)
add_executable(digits-do-while digits-do-while.c)

# for-a-while
add_executable(selection-sort selection-sort.c)
add_executable(palindrome palindrome.c)