# 0-intro
add_executable(guess-func guess.c)

# 2-if-for-array
add_executable(leap-func leap.c)

# 3-for-a-while
add_executable(stars-func stars.c)
add_executable(primes-func primes.c)
add_executable(binary-search-func binary-search.c)
add_executable(palindrome-func palindrome.c)
add_executable(selection-sort-func selection-sort.c)

# 4-loops
add_executable(merge-func merge.c)
add_executable(game-of-life-func game-of-life.c)
add_executable(game-of-life-transformed game-of-life-transformed.c)