add_executable(main-re main-re.c)

add_executable(min min.c)

add_executable(min-re min-re.c)
add_executable(sum-re sum-re.c)

add_executable(fib-re fib-re.c)
add_executable(fib-iter fib-iter.c)
add_executable(fib-array fib-array.c)

add_executable(gcd-re gcd-re.c)
add_executable(gcd-iter gcd-iter.c)

add_executable(bsearch-iter bsearch-iter.c)
add_executable(bsearch-re bsearch-re.c)